--- a/search-images/package.json
+++ b/search-images/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "build": "vite build",
+    "build": "vite build --base=/search-images/",
     "preview": "vite preview"
   },
   "devDependencies": {
